Added content and fixed links

--- a/experience.html
+++ b/experience.html
@@ -46,8 +46,8 @@
 
 	<div class=content>
 		<h1 class=center>Experience</h1> 
-    	<div class="list-subcontent center margin-top-40">
-    		<p>Below is a list of my education and past and ongoing work experiences and leadership positions.</p>
+    	<div class="list-subcontent center margin-top-75">
+    		<p>Below is a list of my education and past and ongoing work experiences and leadership positions. Hover over my courses, experiences, or positions for their descriptions.</p>
 			<div class="margin-top-100"></div>
 		</div>
 
@@ -108,7 +108,7 @@
                             <div class="course" id="C-F15-01">
                                 <p class="left-text" id="F15-01">Fundamentals of Programming and CS</p>
                                 <p class="right-text">CS</p>
-                                <p class="course-box" id="course-box-F15-01">Introduction to programming in C</p>
+                                <p class="course-box" id="course-box-F15-01">Introduction to programming in Python</p>
                             </div>
                             <div class="course" id="C-F15-02">
                                 <p class="left-text" id="F15-02">Introduction to Electrical and Computer Engineering</p>
@@ -140,7 +140,7 @@
                             <div class="course" id="C-F15-02">
                                 <p class="left-text" id="F15-02">Introduction to Civil and Environmental Engineering</p>
                                 <p class="right-text">CEE</p>
-                                <p class="course-box" id="course-box-F15-02">Introduction to CEE Fundamentals</p>
+                                <p class="course-box" id="course-box-F15-02">Introduction to CEE fundamentals</p>
                             </div>
                             <div class="course" id="C-F15-03">
                                 <p class="left-text" id="F15-03">Physics I for Engineering Students</p>
@@ -188,7 +188,7 @@
                             <div class="course" id="C-F15-02">
                                 <p class="left-text" id="F15-02">Structure and Design of Digital Systems</p>
                                 <p class="right-text">ECE</p>
-                                <p class="course-box" id="course-box-F15-02">Introduction to basic issues in design and verification of modern digital systems</p>
+                                <p class="course-box" id="course-box-F15-02">Introduction to design and verification of modern digital systems</p>
                             </div>
                             <div class="course" id="C-F15-03">
                                 <p class="left-text" id="F15-03">Introduction to Probability Theory</p>
@@ -301,7 +301,7 @@
                             <div class="course" id="C-F15-01">
                                 <p class="left-text" id="F15-01">Fundamentals of Control</p>
                                 <p class="right-text">ECE</p>
-                                <p class="course-box" id="course-box-F15-01">Fundamental principles and methodologies of classical feedback control and its applications</p>
+                                <p class="course-box" id="course-box-F15-01">Fundamental principles and methodologies of classical feedback control and applications</p>
                             </div>
                             <div class="course" id="C-F15-02">
                                 <p class="left-text" id="F15-02">Special Topics in Speech Processing</p>
@@ -418,7 +418,7 @@
                         <div id="left">
                             <p></p>
                             <div class="course-title">
-                                <p class="left-text-title" style="float: none;">Fall 2020 (In Progress)</p>
+                                <p class="left-text-title" style="float: none;">Fall 2020 (Upcoming)</p>
                                 <div id="underline"></div>
                             </div>
                             <div class="course" id="C-F15-01">
