--- a/interests.html
+++ b/interests.html
@@ -57,14 +57,14 @@
 
     <div class=content>
         <p class="sub-title center">Event Production & Audio Engineering</p>
-        <p> In my freshman year of college, I joined the student organization AB Tech, which provides our campus with professional technical production. I joined with no prior experience, but it soon became one of my most valued experiences. From working on open mics to talent shows to concerts and orientation, I've been able to take on many different roles. My primary focus is in sound and rigging, but I'm also interested in lighting.</p>
+        <p> In my freshman year of college, I joined the student organization AB Tech, which provides our campus with professional technical production. I joined with no prior experience, but it soon became one of my most valued experiences. From working on open mics to talent shows to concerts and orientation, I've been able to take on many different roles. My primary focus is in sound, rigging, and management, but I'm also interested in lighting.</p>
         <br>
         <div id="line-grey"></div>
         <br>
 
         <p>AB Tech is where I found a passion for audio engineering. You can usually find me in the house as the Front of House engineer or backstage as the monitors engineer. I've worked sound for various events like Greek Sing and concerts featuring acts like Nghtmre, Snakehips, Gnash, and Smallpools. My favorite part about being a sound engineer is mixing live.</p>
         <p> I am also a master rigger for AB Tech. As a rigger, I oversee the safety and implementation of flown equipment. I've worked on shows like Lunar Gala and various indoor and outdoor concerts.</p>
-        <p>As a senior member of the org, I've also run events as production manager, or as we call Techie-in-Charge. The largest event I've supervised is CMU's 2019 First Year Orientation. I love to see events come together and become successful even though it was stressful or daunting. </p>
+        <p>As a senior member of the org, I've also run events as a production manager, or as we call Techie-in-Charge. The largest event I've supervised is CMU's 2019 First Year Orientation. I love to see events come together and become successful even though it was stressful or daunting. </p>
         <p>Some of my favorite experienes in Tech are: being an assistant FoH for my first concert featuring Nghtmre, and lighting a dance that the audience "ooh'd" at! Working as a student technician has helped me to appreciate all who work in the background.</p>
 
         <!-- Slideshow container -->
@@ -99,7 +99,6 @@
         <a class="prev" onclick="plusDivs(this, -1)">&#10094;</a>
         <a class="next" onclick="plusDivs(this, 1)">&#10095;</a>
         </div>
-        <br>
 
         <!-- The dots/circles -->
         <div style="text-align:center">
@@ -119,7 +118,7 @@
 
         <p> 
         I am an amateur photographer who enjoys photographing nature and everyday life. My equipment of choice are my LG V30 phone, Lumix DMC-GX85, and Nikon D300s. I've been taking pictures for over 10 years, and I'm always eager to improve. I am currently exploring portrait photography and I hope to do more concert photography during events with AB Tech.</p>
-        <p>Take a look at a sample of my work. For more, check out my <a href="https://www.instagram.com/btanster/">Instagram</a> and <a href="https://www.flickr.com/photos/132526562@N03/">Flickr</a>.</p>
+        <p>Take a look at a sample of my work. For more, check out my <a href="https://www.instagram.com/btanster/" target="_blank">Instagram</a> and <a href="https://www.flickr.com/photos/132526562@N03/" target="_blank">Flickr</a>.</p>
         <br>
         <div id="line-grey"></div>
         <br>
@@ -164,7 +163,7 @@
 
     <div class=content>
         <p class="sub-title center">Environment</p>
-        <p> I care a lot about the environment. Yearly outings like going camping, skiing, and visiting national parks have made me appreciate the world we live in. Part of the reason why I like to do nature photography is to share the wonderful outdoors as I see it. I've volunteered a lot, such as cleaning rivers of trash, sorting recyclables for my high school, and more. As part of a leadership program at CMU, I also helped to spread awareness about recycling during my freshman year. Although I am focusing on my other passions now, I still try my best to be environmentally conscious.</p>
+        <p> I care a lot about the environment. Yearly outings like going camping, skiing, and visiting national parks have made me appreciate the world we live in. Part of the reason why I like to do nature photography is being able to share the wonderful outdoors as I see it. I've volunteered a lot, such as cleaning rivers of trash, sorting recyclables for my high school, and more. As part of a leadership program at CMU, I also helped to spread awareness about recycling during my freshman year. Although I am focusing on my other passions now, I still try my best to be environmentally conscious.</p>
         <br>
     </div>
 
@@ -179,7 +178,7 @@
         <p>I enjoy doing art. I like to sketch in my free time, and I've found a lot of inspiration in manga. I did ceramics for several years in high school. I made graphic designs in high school for online forums. Recently, I've been taking classes in glassblowing.</p>
         <br>
         <p>Music</p>
-        <p> I love to listen to music, especially when I work. I used to play the piano and violin, and I like to sing for fun. My favorite bands are Two Steps From Hell and Linkin Park, but I also like a wide variety of music. I'd love to chat about what you've been listening to!</p>
+        <p> I love to listen to music, especially when I work. My favorite bands are Two Steps From Hell and Linkin Park, but I also like a wide variety of music. I'd love to chat about what you've been listening to!</p>
     </div> 
 
     
