--- a/projects.html
+++ b/projects.html
@@ -45,12 +45,12 @@
     </div>
 
 
-	<div class=content>  <!-- style="width: 80%; margin-left: 10%"> -->
+	<div class=content style="width: 74%; margin-left: 13%">
 		<div class="list-content">
 	    	<h1 class="center">Projects</h1>
-	    	<div style="height: 30px"></div>
+	    	<div style="height: 10px"></div>
 	    	<div class="row">
-				<div class="column-left" style="background-color: black; width: 25%">
+				<div class="column-left" style="background-color: black; width: 20%">
 					<div class="tab">
 						<button class="tablinks" onclick="openCity(event, 'pw')" id="defaultOpen">Personal Website</button>
 						<button class="tablinks" onclick="openCity(event, 'toy-camera')">Toy Camera</button>
@@ -58,16 +58,16 @@
 						<button class="tablinks" onclick="openCity(event, 'lang-ID')">Language Identification System</button>
 						<button class="tablinks" onclick="openCity(event, 'window-robot')">Window Washing Robot</button>
 						<button class="tablinks" onclick="openCity(event, 'dialog-sys')">Dialog System</button>
-						<button class="tablinks" onclick="openCity(event, 'exergame')">Exergame For Preschool Children</button>
+						<button class="tablinks" onclick="openCity(event, 'exergame')">Exergames For Preschool Children</button>
 						<button class="tablinks" onclick="openCity(event, 'kernel')">Embedded Real Time Kernel</button>
 						<button class="tablinks" onclick="openCity(event, 'platformer')">Custom Platformer Game</button>
 					</div>
 			
 				</div>
-				<div class="column-right" style="width: 75%">
+				<div class="column-right" style="width: 80%; padding-left: 10px;">
 					<div id="pw" class="tabcontent">
 						<h3>January 2020 - Present</h3>
-						<p>I made this personal website for <a href="https://cardadfar.github.io/stuco_webdev_website/index.html">StuCo: Building Personal Websites</a>, a student-taught course. Through this class, I learned the basics of website design, HTML, CSS, JavaScript, and jQuery. I will continue to use those skills to update this website.<br><br>A lot of the code on this website was developed based on the class and <a href="https://www.w3schools.com">w3schools.com</a> or adapted from other websites. Please reach out to me if you have any feedback on my website or tips on website development. I'm eager to learn more!</p> 
+						<p>I made this personal website for <a href="https://cardadfar.github.io/stuco_webdev_website/index.html" target="_blank">StuCo: Building Personal Websites</a>, a student-taught course. Through this class, I learned the basics of website design, HTML, CSS, JavaScript, and jQuery. I will continue to use those skills to update this website.<br><br>A lot of the code on this website was developed myself based on what I learned in the class and <a href="https://www.w3schools.com" target="_blank">w3schools.com</a> or adapted from other websites. Please reach out to me if you have any feedback on my website or tips on website development. I'm eager to learn more!</p> 
 					</div>
 
 					<div id="toy-camera" class="tabcontent">
@@ -77,20 +77,19 @@
 							<!-- Full-width images with number and caption text -->
 							<div class="mySlides fade">
 								<div class="numbertext">1 / 2</div>
-								<img src="images/toy-camera1.jpg" style="max-height: 300px; max-width: 100%">
+								<img src="images/toy-camera1.jpg" style="max-height: 350px; max-width: 100%">
 								<div class="text">Toy camera front</div>
 							</div>
 
 							<div class="mySlides fade">
 								<div class="numbertext">2 / 2</div>
-								<img src="images/toy-camera2.jpg" style="max-height: 300px; max-width: 100%">
+								<img src="images/toy-camera2.jpg" style="max-height: 350px; max-width: 100%">
 								<div class="text">Toy camera back</div>
 							</div>
 
 							<a class="prev" onclick="plusDivs(this, -1)">&#10094;</a>
   							<a class="next" onclick="plusDivs(this, 1)">&#10095;</a>
 						</div>
-						<br>
 
 
 						<!-- The dots/circles -->
@@ -99,17 +98,17 @@
 						  <span class="dot" onclick="currentSlide(2)"></span>
 						</div>
 						<h3>February 2020</h3>
-						<p>My group of 3 fabricated a toy camera for our Intro to Making course. We assembled a frame from laser cut and 3D printed pieces and used an Arduino, electronics, and LEDs to replicate a real camera's functions. I was in charge of programming the electronics and assembling the circuits.</p>
+						<p>My group of 3 fabricated a toy camera for our Intro to Making course. We assembled a frame from laser cut and 3D printed pieces and used an Arduino, electronics, and LEDs to replicate a real camera's functions. You could scope the lens in and out, press a button to turn on the camera , and press a button to identify the color in front of the lens and display it on an LED array. Unfortunately, the LED array broke and isn't assembled in the photos above. Turning on and pressing the shutter button have audio and visual feedback via a piezoelectric speaker and a red LED. I was in charge of programming the electronics and assembling the circuits.</p>
 					</div>
 
 					<div id="chiptune" class="tabcontent">
 						<h3>Fall 2019</h3>
-						<p>Using Nyquist, a sound synthesis and composition language, I wrote a chiptune/8-bit effect library. Users can use the library to change audio into chiptune and mix the original and chiptune sounds.</p>
+						<p>Using Nyquist, a sound synthesis and composition language, I wrote a chiptune/8-bit effect library. Users can use the library to input an audio sample and output a chiptune-like version. The start time, duration, and note ranges can be specified. Users could also use functions to mix the original and chiptune sounds and fade them in and out of one another.</p>
 					</div>	
 
 					<div id="lang-ID" class="tabcontent">
 						<h3>Fall 2019</h3>
-						<p>For our Speech Recognition course project, I collaborated with two teammates to design a successful language identification system for English, German, and Mandarin Chinese speech. The system used phones for identifying the language. We developed the system and baseline comparisons using Python in Google Colab.<br><br> For our <a href="https://drive.google.com/file/d/1qSzUatCmelS3LLjeaT6RmN-2aO2L_tPA/view?usp=sharing">project poster</a>.</p>
+						<p>For our Speech Recognition course project, I collaborated with two teammates to design a successful language identification system for English, German, and Mandarin Chinese speech. The system used phones for identifying the language. We developed the system and baseline comparisons using Python in Google Colab.<br><br> For our <a href="https://drive.google.com/file/d/1qSzUatCmelS3LLjeaT6RmN-2aO2L_tPA/view?usp=sharing" target="_blank">project poster</a>.</p>
 					</div>	
 
 					<div id="window-robot" class="tabcontent">
@@ -119,20 +118,19 @@
 							<!-- Full-width images with number and caption text -->
 							<div class="mySlides fade">
 								<div class="numbertext">1 / 2</div>
-								<img src="images/window-washing-robot.jpg" style="max-height: 300px; max-width: 100%">
+								<img src="images/window-washing-robot.jpg" style="max-height: 350px; max-width: 100%">
 								<div class="text">Window Washing Robot</div>
 							</div>
 
 							<div class="mySlides fade">
 								<div class="numbertext">2 / 2</div>
-								<img src="images/robot-demo-img.png" style="max-height: 300px; max-width: 100%">
+								<img src="images/robot-demo-img.png" style="max-height: 350px; max-width: 100%">
 								<div class="text">Image from our final demo</div>
 							</div>
 
 							<a class="prev" onclick="plusDivs(this, -1)">&#10094;</a>
   							<a class="next" onclick="plusDivs(this, 1)">&#10095;</a>
 							</div>
-							<br>
 
 						<!-- The dots/circles -->
 						<div style="text-align:center">
@@ -141,17 +139,45 @@
 						</div>
 
 						<h3>Spring 2019</h3>
-						<p>For my undergraduate capstone, my team of 5 developed an autonomous robot that can automatically adhere to and navigate over a window pane, cross over a barrier, and clean a 5' x 6' total area in under 3 minutes. The device uses ducted propellers to adhere to the window, wheels to move, and a sponge-based mechanism for cleaning. Proximity sensors and an IMU help the robot to navigate. I was in charge of assembling the electronic components and circuitry of the robot. I also helped to develop the control, locomotion, adhesion, sensing, and cleaning subsystems.<br><br> More details about this project can be found on our <a href="https://sites.google.com/view/geickobot/home">capstone website</a>.</p>
+						<p>For my undergraduate capstone, my team of 5 developed an autonomous robot that can automatically adhere to and navigate over a window pane, cross over a barrier, and clean a 5' x 6' total area in under 3 minutes. The device uses ducted propellers to adhere to the window, wheels to move, and a sponge-based mechanism for cleaning. Proximity sensors and an IMU help the robot to navigate. I was in charge of assembling the electronic components and circuitry of the robot. I also helped to develop the control, locomotion, adhesion, sensing, and cleaning subsystems.<br><br> More details about this project can be found on our <a href="https://sites.google.com/view/geickobot/home" target="_blank">capstone website</a>.</p>
 					</div>	
 
 					<div id="dialog-sys" class="tabcontent">
 						<h3>November 2018</h3>
-						<p>One of the course projects for my Speech Processing class was to build a multi-turn pizza ordering system as an Alexa Skill for Amazon Echos. I created state diagrams and used ngrok and flask-ask to develop servers and dialog for the Alexa skill.</p>
+						<p>One of the course projects for my Speech Processing class was to build a multi-turn pizza ordering system as an Alexa Skill for Amazon Echos. I created state diagrams and used ngrok and flask-ask to develop servers and dialog for the Alexa skill. Users were able to request Alexa to order a pizza and specify the size, dough type, and toppings over several turns of conversation.</p>
 					</div>
 
 					<div id="exergame" class="tabcontent">
+						<!-- Slideshow container -->
+						<div class="slideshow-container slider" id="div3">
+
+							<!-- Full-width images with number and caption text -->
+							<div class="mySlides fade">
+								<div class="numbertext">1 / 2</div>
+								<img src="images/flanker.png" style="max-height: 350px; max-width: 100%">
+								<div class="text">Flanker Exergame Tutorial</div>
+							</div>
+
+							<div class="mySlides fade">
+								<div class="numbertext">2 / 2</div>
+								<img src="images/gonogo.png" style="max-height: 350px; max-width: 100%">
+								<div class="text">Go/No-Go Exergame</div>
+							</div>
+
+							<a class="prev" onclick="plusDivs(this, -1)">&#10094;</a>
+  							<a class="next" onclick="plusDivs(this, 1)">&#10095;</a>
+							</div>
+
+						<!-- The dots/circles -->
+						<div style="text-align:center">
+						  <span class="dot" onclick="currentSlide(1)"></span>
+						  <span class="dot" onclick="currentSlide(2)"></span>
+						</div>
+
 						<h3>May 2017 - September 2018</h3>
-						<p>I worked on a team of six to design and program video games promoting cognitive engagement and physical activity, which enhanced cognitive control and school readiness skills in prekindergarten children</p>
+						<p>I worked on a team of six to design and program video games promoting cognitive engagement and physical activity for Ph.D Candidate <a href="https://cassondraeng.github.io/index.html" target="_blank">Cassie Eng's</a> study on the effect of exergames on the cognitive control and school readiness skills of prekindergarten children.</p>
+						<p>The games I made were modified versions of the behavioral executive function assessments Flanker and Go/No-Go. The exergame based on the Flanker task became the basis of the study. When playing the Flanker exergame, children stepped on the left or right arrows of a physical game mat depending on the direction that the center fish of a row of five faced. Correct inputs rewarded the child and sped up the pace of the game. The game would adapt if the child could not keep up with the game's pace. The exergame based on Go/No-Go also had the child step left or right on the game mat depending on which side of the screen a balloon showed up and what color it was. I designed concepts and graphics, and programmed game mechanics, levels, menus, and more for both games.</p>
+						<p>To learn more about this study, see this <a href="https://www.researchgate.net/profile/Cassondra_Eng/publication/341654844_Adaptations_of_Executive_Function_and_Prefrontal_Cortex_Connectivity_Following_Exergame_Play_in_4-to_5-year_old_Children/links/5ecd6b1945851529451461c9/Adaptations-of-Executive-Function-and-Prefrontal-Cortex-Connectivity-Following-Exergame-Play-in-4-to-5-year-old-Children.pdf" target="_blank">publication</a>. </p>
 					</div>	
 
 					<div id="kernel" class="tabcontent">
@@ -162,6 +188,7 @@
 					<div id="platformer" class="tabcontent">
 						<h3>Fall 2015</h3>
 						<p>For the final term project in the class Fundamentals of Programming, I designed and developed a game using Python and Pygame. The game includes a sidescrolling stage, menus, and mouse and keyboard controls. Puzzles are solved by drawing specific shapes with the mouse to interact with objects in the environment.</p>
+						<p>An overview video of the game can be found on <a href="https://youtu.be/dYqo75e2ZPQ" target="_blank">Youtube</a>.</p>
 					</div>	
 				</div>
 			</div>
