--- a/skills.html
+++ b/skills.html
@@ -48,7 +48,8 @@
 	<div class=content>
 		<h1 class=center>Skills</h1> 
     	<div class="list-subcontent center margin-top-75">
-    		<p>Digital Signal Processing • Image Processing • Software Engineering • Audio Engineering • Embedded Programming • Maker</p>
+    		<!-- <p>Digital Signal Processing • Image Processing • Software Engineering • Audio Engineering • Embedded Programming • Maker</p> -->
+    		<p>I have skills in digital signal processing, image processing, software engineering, audio engineering, embedded programming, and making.</p>
 			<p>Below is a list of the programming languages, software, and hardware that I use and their purposes. Other skills that I have are also included.</p>
 			<div class="margin-top-100"></div>
 		</div>
@@ -119,7 +120,7 @@
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Procreate </p>
-			<p id="small-sub-text">Sketches</p>
+			<p id="small-sub-text">Sketching</p>
 		</div>
     	
     	<h1 class="center margin-top-75 font-lighter">Fabrication</h1>
