--- a/experience.html
+++ b/experience.html
@@ -456,11 +456,12 @@
 				<p id="small-side-text">Open Learning Initiative, Carnegie Mellon University</p>
 				<div id="small-sub-text">
 					<p id="small-sub-text1">March 2020 - Present, June 2019 - December 2019</p>
-					<p id="small-sub-text2">Developed and updated engaging course workbooks, and completed QA for online courses</p>
+					<p id="small-sub-text2">Developed and updated engaging course workbooks and content, and completed QA for online courses</p>
 				</div>
 				<div class="expskills">
 					<p id="rcorners1">Excel</p>
-					<p id="rcorners1">QA</p>
+                    <p id="rcorners1">QA</p>
+                    <p id="rcorners1">G Suite</p>
 				</div>
 			</div>
 		</div>
@@ -470,7 +471,7 @@
 					<p id="small-side-text">AB Tech, Carnegie Mellon University</p>
 					<div id="small-sub-text">
 					<p id="small-sub-text1">October 2015 - Present</p>
-					<p id="small-sub-text2">Collaborated with event organizers to execute events. Primarily ran sound and rigging for events.</p>
+					<p id="small-sub-text2">Collaborated with event organizers to execute a wide variety of successful events. Primarily ran sound, rigging, and production management.</p>
 				</div>
 				<div class="expskills">
 					<p id="rcorners1">Audio Engineering</p>
@@ -495,7 +496,7 @@
 			</div>
 		</div>
     	<div class="list-subcontent">
-			<p id="side-text"> Research Programmer </p>
+			<p id="side-text"> Research Assistant </p>
 			<div class="small-subcontent">
 			<p id="small-side-text">Infant Language and Learning Lab, Carnegie Mellon University</p>
 				<div id="small-sub-text">
@@ -540,7 +541,8 @@
 					<p id="small-sub-text2" style="padding-right: 2px">Run social media, lead recruitment campaigns, and improve relations with alumni</p>
 				</div>
 				<div class="expskills">
-					<p id="rcorners1">Social Media</p>
+                    <p id="rcorners1">Recruiting</p>
+                    <p id="rcorners1">Social Media</p>
 					<p id="rcorners1">Digital Marketing</p>
 				</div>
 			</div>
@@ -567,7 +569,7 @@
 				<div class="expskills">
 					<p id="rcorners1">Leadership</p>
 					<p id="rcorners1">Management</p>
-					<p id="rcorners1">Recruitment</p>
+					<p id="rcorners1">Recruiting</p>
 					<p id="rcorners1">Mentoring</p>
 				</div>
 			</div>
