--- a/skills.html
+++ b/skills.html
@@ -62,7 +62,7 @@
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Python </p>
-			<p id="small-sub-text">Computer Vision • NumPy • PyGame</p>
+			<p id="small-sub-text">Computer Vision • NumPy • PyGame • PyTorch</p>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> C </p>
