--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </div>
           <div class="column-right">
             <h1 class=header style="font-size: 50px; font-weight: bold;margin-top: 150px;">Hello!</h1>
-                <p style="margin-top: 50px;"> I'm Bridget. I am a student at Carnegie Mellon University pursuing my Master's degree in Electrical and Computer Engineering through the Integrated Master's and Bachelor's Program. In 2019, I graduated from CMU with a Bachelor's degree in ECE and a minor in <a href="https://engineering.cmu.edu/education/undergraduate-programs/curriculum/majors-minors.html" target="_blank">audio engineering</a>. My academic interests primarily lie in audio and image processing. 
+                <p style="margin-top: 50px;"> I'm Bridget, a student at Carnegie Mellon University pursuing my Master's degree in Electrical and Computer Engineering through the Integrated Master's and Bachelor's Program. I will be graduating in December 2020. In 2019, I graduated from CMU with a Bachelor's degree in ECE and a minor in <a href="https://engineering.cmu.edu/education/undergraduate-programs/curriculum/majors-minors.html" target="_blank">audio engineering</a>. My interests primarily lie in audio and image processing. 
 
                 <br><br> I am seeking job opportunities for 2021 in signal processing. Please feel free to connect with me at bridgett@andrew.cmu.edu.
 
