Updated epxerience and skills content

--- a/experience.html
+++ b/experience.html
@@ -476,7 +476,8 @@
 				<div class="expskills">
 					<p id="rcorners1">Audio Engineering</p>
 					<p id="rcorners1">Rigging</p>
-					<p id="rcorners1">Event Planning</p>
+                    <p id="rcorners1">Event Planning</p>
+                    <p id="rcorners1">Customer Support</p>
 					<p id="rcorners1">Teamwork</p>
 				</div>
 			</div>
