--- a/skills.html
+++ b/skills.html
@@ -81,7 +81,7 @@
 			<p id="small-sub-text">Arduino Programming</p>
 		</div>
     	<div class="list-subcontent">
-			<p id="side-text"> HTML & CSS </p>
+			<p id="side-text"> HTML & CSS & JavaScript</p>
 			<p id="small-sub-text">Writing Websites</p>
 		</div>
 
