--- a/experience.html
+++ b/experience.html
@@ -55,7 +55,7 @@
     	<div id="line-grey"></div>
     	<div class="list-subcontent">
 			<p id="side-text"> MS in Electrical and Computer Engineering </p>
-			<p id="small-side-text">Carnegie Mellon University - Expected in December 2020</p>
+			<p id="small-side-text">Carnegie Mellon University - December 2020</p>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text">BS in Electrical and Computer Engineering</p>
@@ -418,7 +418,7 @@
                         <div id="left">
                             <p></p>
                             <div class="course-title">
-                                <p class="left-text-title" style="float: none;">Fall 2020 (Upcoming)</p>
+                                <p class="left-text-title" style="float: none;">Fall 2020</p>
                                 <div id="underline"></div>
                             </div>
                             <div class="course" id="C-F15-01">
@@ -455,7 +455,7 @@
 			<div class="small-subcontent">
 				<p id="small-side-text">Open Learning Initiative, Carnegie Mellon University</p>
 				<div id="small-sub-text">
-					<p id="small-sub-text1">March 2020 - Present, June 2019 - December 2019</p>
+					<p id="small-sub-text1">June 2019 - Present</p>
 					<p id="small-sub-text2">Developed and updated engaging course workbooks and content, and completed QA for online courses</p>
 				</div>
 				<div class="expskills">
@@ -470,7 +470,7 @@
 				<div class="small-subcontent">
 					<p id="small-side-text">AB Tech, Carnegie Mellon University</p>
 					<div id="small-sub-text">
-					<p id="small-sub-text1">October 2015 - Present</p>
+					<p id="small-sub-text1">October 2015 - December 2020</p>
 					<p id="small-sub-text2">Collaborated with event organizers to execute a wide variety of successful events. Primarily ran sound, rigging, and production management.</p>
 				</div>
 				<div class="expskills">
