--- a/skills.html
+++ b/skills.html
@@ -106,13 +106,17 @@
 			<p id="side-text"> Unity </p>
 			<p id="small-sub-text">Game Development</p>
 		</div>
-    	<div class="list-subcontent">
-			<p id="side-text"> SOLIDWORKS </p>
-			<p id="small-sub-text">CAD Modeling</p>
-		</div>
+        <div class="list-subcontent">
+            <p id="side-text"> SOLIDWORKS </p>
+            <p id="small-sub-text">CAD Modeling</p>
+        </div>
+        <div class="list-subcontent">
+            <p id="side-text"> KiCad/Fritzing </p>
+            <p id="small-sub-text">Circuit Design • PCB Design</p>
+        </div>
     	<div class="list-subcontent">
 			<p id="side-text"> Pro Tools </p>
-			<p id="small-sub-text">Sound Recording, Editing & Mastering</p>
+			<p id="small-sub-text">Sound Recording • Editing • Mastering</p>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Photoshop </p>
