--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
           </div>
           <div class="column-right">
             <h1 class=header style="font-size: 50px; font-weight: bold;margin-top: 150px;">Hello!</h1>
-                <p style="margin-top: 50px;"> I'm Bridget, a student at Carnegie Mellon University pursuing my Master's degree in Electrical and Computer Engineering through the Integrated Master's and Bachelor's Program. I will be graduating in December 2020. In 2019, I graduated from CMU with a Bachelor's degree in ECE and a minor in <a href="https://engineering.cmu.edu/education/undergraduate-programs/curriculum/majors-minors.html" target="_blank">audio engineering</a>. My interests primarily lie in audio and image processing. 
+                <p style="margin-top: 50px;"> I'm Bridget, a recent graduate of Carnegie Mellon University with a Master's degree in Electrical and Computer Engineering through the Integrated Master's and Bachelor's Program. In 2019, I graduated from CMU with a Bachelor's degree in ECE and a minor in <a href="https://engineering.cmu.edu/education/undergraduate-programs/curriculum/majors-minors.html" target="_blank">audio engineering</a>. My interests primarily lie in audio and image processing. 
 
-                <br><br> I am seeking job opportunities for 2021 in signal processing. Please feel free to connect with me at bridgett@andrew.cmu.edu.
+                <br><br> I am seeking job opportunities for 2021 in signal processing and programming. Please feel free to connect with me at bridgett@andrew.cmu.edu.
 
                 <br><br> For my <a href="documents/Bridget Tan Resume.pdf" target="_blank">resume</a>.
                 </p>
@@ -69,10 +69,10 @@
 	</div> -->
     <div class="content">
     	<div class=item>
-        	<h3 class=header-center>MS in Electrical and Computer Engineering</h3>		
-    		<p class=description> Carnegie Mellon University - Expected in December 2020</p>
+        	<h3 class=header-center>Master of Electrical and Computer Engineering</h3>		
+    		<p class=description> Carnegie Mellon University - December 2020</p>
         	
-        	<h3 class=header-center>BS in Electrical and Computer Engineering</h3>		
+        	<h3 class=header-center>Bachelor of Electrical and Computer Engineering</h3>		
     		<p class=description> Carnegie Mellon University - May 2019</p>
 
         	<h3 class=header-center>Minor in Audio Engineering</h3>		
