Updated content and Projects page design

--- a/interests.html
+++ b/interests.html
@@ -172,10 +172,10 @@
     <div class=content>
         <p class="sub-title center">Other Interests</p>
         <p>Video Games</p>
-        <p>I love playing videos games. My favorite genre is JRPG and my favorite game is Xenoblade Chronicles. I also like the Zelda and Kingdom Hearts series.</p>
+        <p>I love playing videos games as a way to relax. My favorite genre is JRPG and my favorite game is Xenoblade Chronicles. I'm currently playing Yakuza 0 and Kingdom Hearts: Birth by Sleep. If you have any Switch or PS4 game suggestions, I'd love to hear about them. Like other gamers, I have a decently sized backlog, but I'm always looking to expand it with more great games!</p>
         <br>
         <p>Art</p>
-        <p>I enjoy doing art. I like to sketch in my free time, and I've found a lot of inspiration in manga. I did ceramics for several years in high school. I made graphic designs in high school for online forums. Recently, I've been taking classes in glassblowing.</p>
+        <p>I enjoy doing art. I like to sketch in my free time, and I've found a lot of inspiration in manga. In high school, I did ceramics for several years and I made graphic designs for online forums. Recently, I've been taking classes in glassblowing and working on my digital drawing skills. My tools of trade are my iPad and Procreate.</p>
         <br>
         <p>Music</p>
         <p> I love to listen to music, especially when I work. My favorite bands are Two Steps From Hell and Linkin Park, but I also like a wide variety of music. I'd love to chat about what you've been listening to!</p>
