--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
           </div>
           <div class="column-right">
             <h1 class=header style="font-size: 50px; font-weight: bold;margin-top: 150px;">Hello!</h1>
-                <p style="margin-top: 50px;"> I'm Bridget, a recent graduate of Carnegie Mellon University with a Master's degree in Electrical and Computer Engineering through the Integrated Master's and Bachelor's Program. In 2019, I graduated from CMU with a Bachelor's degree in ECE and a minor in <a href="https://engineering.cmu.edu/education/undergraduate-programs/curriculum/majors-minors.html" target="_blank">audio engineering</a>. My interests primarily lie in audio and image processing. 
+                <p style="margin-top: 50px;"> I'm Bridget, a recent graduate of Carnegie Mellon University with a Master's degree in Electrical and Computer Engineering through the Integrated Master's and Bachelor's Program. In 2019, I graduated from CMU with a Bachelor's degree in ECE and a minor in <a href="https://engineering.cmu.edu/education/undergraduate-programs/curriculum/majors-minors.html" target="_blank">audio engineering</a>. 
 
-                <br><br> I am seeking job opportunities for 2021 in signal processing and programming. Please feel free to connect with me at bridgett@andrew.cmu.edu.
+                <br><br> My interests primarily lie in audio and image processing, which I have extensive coursework and project experience. Outside of academics, I am passionate about mixing audio for live events and photography.
+
+                <br><br> I am seeking job opportunities in signal processing and programming where I can apply my knowledge and skills and continue to grow as a professional. Please feel free to connect with me at <a href="mailto:bridgett@andrew.cmu.edu">bridgett@andrew.cmu.edu</a>.
 
                 <br><br> For my <a href="documents/Bridget Tan Resume.pdf" target="_blank">resume</a>.
                 </p>
@@ -64,9 +66,6 @@
         </div>
     </div>
 
-    <!-- <div id='resume' class="resume">
-		My Resume 
-	</div> -->
     <div class="content">
     	<div class=item>
         	<h3 class=header-center>Master of Electrical and Computer Engineering</h3>		
